--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,11 @@
 	<modules>
 		<module>ch.opentrainingcenter.client.core</module>
 		<module>ch.opentrainingcenter.client.core.product</module>
-		<!-- 
+	
+	    <module>ch.opentrainingcenter.transfer</module>
+	
 		<module>ch.opentrainingcenter.build.targetdefinition</module>
-		 -->
+	
 	</modules>
 
 	<build>
@@ -62,7 +64,7 @@
 				<configuration>
 				<resolver>p2</resolver>
 					<!-- This defines the target definition file -->
-<!-- 
+
 					<target>
 						<artifact>
 							<groupId>ch.opentrainingcenter</groupId>
@@ -70,7 +72,7 @@
 							<version>1.0.0-SNAPSHOT</version>
 						</artifact>
 					</target>
-					 -->
+					
 					<environments>
 						<environment>
 							<os>linux</os>
