--- a/pom.xml
+++ b/pom.xml
@@ -45,26 +45,32 @@
 
 		<!-- Communication -->
 		<module>ch.opentrainingcenter.transfer</module>
+		<module>ch.opentrainingcenter.common</module>
 
 		<!-- Server -->
 		<module>ch.opentrainingcenter.server.service</module>
+		<module>ch.opentrainingcenter.server.integration</module>
 
 		<!-- Target Definition -->
 		<module>ch.opentrainingcenter.build.targetdefinition</module>
 
 
 		<!-- Tests -->
-		<module>junit</module>
+		<module>ch.opentrainingcenter.common.tests</module>
 		<module>ch.opentrainingcenter.server.service.tests</module>
 
 		<!-- 3th Party -->
+		<module>org.hibernate</module>
 		<module>jodatime</module>
 		<module>logging</module>
 
+		<!-- 3th Party Tests -->
+		<module>junit</module>
+		<module>mockito</module>
 	</modules>
 
 
-	
+
 	<build>
 		<plugins>
 			<plugin>
