--- a/ch.opentrainingcenter.server.integration/build.properties
+++ b/ch.opentrainingcenter.server.integration/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
+source.. = src/,\
+           hibernate/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               hibernate/
