--- a/logging/build.properties
+++ b/logging/build.properties
@@ -1,4 +1,6 @@
 bin.includes = META-INF/,\
                log4j-1.2.16.jar,\
                slf4j-api-1.6.4.jar,\
-               slf4j-simple-1.6.4.jar
+               slf4j-simple-1.6.4.jar,\
+               resource/log4j.properties,\
+               resource/
