add import service

--- a/ch.opentrainingcenter.server.service/plugin.xml
+++ b/ch.opentrainingcenter.server.service/plugin.xml
@@ -2,5 +2,6 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="ch.opentrainingdatabase.db" name="dbaccess" schema="schema/ch.opentrainingdatabase.db.exsd"/>
+   <extension-point id="ch.opentrainingcenter.myimporter" name="myimporter" schema="schema/ch.opentrainingcenter.myimporter.exsd"/>
 
 </plugin>
